# Ferrum-Lab-Kit

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.de.md  README.md  ferrum.path.example.toml  install-edge.sh  install.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bump-ferrum-schedule.yml  ci.yml  codeql.yml  conformance.yml
config/: lab-kit.example.toml
config/ci/: ferrum-revision.txt  helixtest-revision.txt
config/examples/: README.md  ingest-register.json
config/profiles/: beacon-only.toml  drs-wes.toml  field-edge+infra.toml  field-edge.toml  full-elixir-node.toml  institute.toml
contrib/ferrum/: 0001-ga4gh-demo-compose-wes-tes-docker.patch  GA4GH-DEMO-COMPOSE.md  README.md  demo-docker-compose.ga4gh.yml
crates/lab-kit-adapters/: Cargo.toml
crates/lab-kit-adapters/migrations/postgres/: 20250319120000_lab_kit_metadata.sql
crates/lab-kit-adapters/migrations/sqlite/: 20250319120000_lab_kit_metadata.sql
crates/lab-kit-adapters/src/: compute.rs  lib.rs  posix_storage.rs  postgres_integration_tests.rs  s3_storage.rs  slurm.rs  slurm_ssh.rs  storage.rs  workflow.rs
crates/lab-kit-adapters/src/metadata/: mod.rs  postgres.rs  sqlite.rs  types.rs
crates/lab-kit-auth/: Cargo.toml
crates/lab-kit-auth/src/: error.rs  keycloak.rs  lib.rs  ls_login.rs  passport.rs  provider.rs
crates/lab-kit-core/: Cargo.toml
crates/lab-kit-core/src/: config.rs  error.rs  health.rs  lib.rs  profile.rs  registry.rs
crates/lab-kit-deploy/: Cargo.toml
crates/lab-kit-deploy/src/: compose.rs  error.rs  helm.rs  lib.rs  routing.rs  systemd.rs
crates/lab-kit-ferrum/: Cargo.toml
crates/lab-kit-ferrum/src/: lib.rs
crates/lab-kit-ingest/: Cargo.toml
crates/lab-kit-ingest/src/: lib.rs
crates/lab-kit-report/: Cargo.toml
crates/lab-kit-report/src/: error.rs  json_report.rs  lib.rs  pdf_report.rs
crates/lab-kit-selector/: Cargo.toml
crates/lab-kit-selector/src/: main.rs
deploy/docker-compose/: co-deploy.yml  docker-compose.auth.yml  docker-compose.base.yml  docker-compose.beacon.yml  docker-compose.drs.yml  docker-compose.htsget.yml  docker-compose.tes.yml  docker-compose.trs.yml  docker-compose.wes.yml  edge.yml  infra.yml
deploy/docker-compose/ga4gh-infra-config/: access-decision-service.toml  duo-service.toml  service-registry.toml  visa-registry.toml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  deployment-auth.yaml  deployment-beacon.yaml  deployment-drs.yaml  deployment-htsget.yaml  deployment-tes.yaml  deployment-trs.yaml  deployment-wes.yaml
deploy/slurm/: ferrum-gateway.service
deploy/traefik/: README.md  docker-compose.yml
docs/: ARCHITECTURE.md  BRING-YOUR-OWN.md  BUSINESS-MODEL.md  CONFORMANCE.md  DEPLOYMENT-TARGETS.md  ECOSYSTEM.md  ELIXIR-AAI.md  FERRUM-GA4GH-DEMO-OVERLAY.md  FERRUM-INTEGRATION.md  GA4GH-STANDARDS.md  GA4GH-WORKFLOW-PRIMER.md  OPERATIONS-CHECKLIST.md  README.md
scripts/: bump-ferrum.sh  stack-down.sh  stack-up.sh
