[workspace]
resolver = "2"
members = [
    "crates/lab-kit-core",
    "crates/lab-kit-adapters",
    "crates/lab-kit-auth",
    "crates/lab-kit-deploy",
    "crates/lab-kit-ferrum",
    "crates/lab-kit-ingest",
    "crates/lab-kit-report",
    "crates/lab-kit-selector",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/SynapticFour/Ferrum-Lab-Kit"
rust-version = "1.91.1"

[workspace.dependencies]
anyhow = "1.0"
aws-config = { version = "1.5", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-s3 = { version = "1.129", default-features = false, features = ["rt-tokio", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
jsonwebtoken = "9.3"
printpdf = "0.7"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Reason: Lab Kit metadata stores (Postgres + SQLite) and sqlx migrations.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "json",
] }
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
