[package]
name = "lab-kit-core"
description = "Ferrum Lab Kit — config schema, service registry, health aggregation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
