[package]
name = "lab-kit-deploy"
description = "Compose, Helm, and systemd artifact generators for Ferrum Lab Kit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
lab-kit-core = { path = "../lab-kit-core" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
