[package]
name = "lab-kit-ferrum"
description = "Compile-time bridge to SynapticFour/Ferrum platform crates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Pin must stay in sync with config/ci/ferrum-revision.txt (full git SHA recommended).
ferrum-core = { git = "https://github.com/SynapticFour/Ferrum.git", rev = "5639264c8d0f98af29ab9ea613a4bfe7b31633e0" }
