[package]
name = "lab-kit-ingest"
description = "HTTP client for Ferrum /api/v1/ingest (Lab Kit machine ingest)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
